src/objects/Purchase_Orders__c.object
<CustomObject>
    <fields>
        <fullName>Authorised_by__c</fullName>
        <label>Authorised by</label>
        <picklist>
            <picklistValues>
                <fullName>Phil Shoesmith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jason Stewart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashley Hanson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Sellen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders (Customer ID)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_order__c</fullName>
        <label>Date &amp; Time of order</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_method__c</fullName>
        <label>Order method</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product code</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_order_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase order number</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recieved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor (ID)</label>
        <referenceTo>Vendors__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Purchase Orders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>